--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -6,8 +6,9 @@
     android:layout_height="match_parent"
     tools:context="com.alex.androidjetpack.ui.ResultActivity">
 
-    <TextView
+    <Button
+        android:id="@+id/tv_second_test"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="activity main"/>
+        android:text="default"/>
 </LinearLayout>
