--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -4,11 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.alex.androidjetpack.ui.LoginActivity">
+    tools:context=".ui.ListActivity">
 
     <Button
-        android:id="@+id/tv_second_test"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="default"/>
+        android:text="btn"/>
 </LinearLayout>
