--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -23,6 +23,12 @@
         android:paddingRight="20dp"
         tools:context=".ui.LoginActivity">
 
+        <Button
+            android:id="@+id/btn_move_line"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="移动曲线绘制demo"/>
+
         <EditText
             android:id="@+id/et_username"
             android:layout_width="match_parent"
